update footer, add call to action and link to social media

--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,7 @@ collections:
     output: true
   events:
     output: true
+
+facebook_url: https://www.facebook.com/makerspacemtu/
+twitter_url: https://twitter.com/makerspacemtu
+email_address: makerspace@mtu.edu
