--- a/_config.yml
+++ b/_config.yml
@@ -15,3 +15,4 @@ collections:
 facebook_url: https://www.facebook.com/makerspacemtu/
 twitter_url: https://twitter.com/makerspacemtu
 email_address: makerspace@mtu.edu
+email_updates_url: http://eepurl.com/bKQAsf
