Updates for Magann
- added new advisors and coaches
- fixed disappearing nav issue

--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,6 @@ collections:
 
 facebook_url: https://www.facebook.com/makerspacemtu/
 twitter_url: https://twitter.com/makerspacemtu
+instagram_url: https://instagram.com/makerspacemtu
 email_address: makerspace@mtu.edu
 email_updates_url: http://eepurl.com/bKQAsf
