Adds 3 new buttons: reserve the makerspace, request training, and our discord server invite link

--- a/_config.yml
+++ b/_config.yml
@@ -15,5 +15,9 @@ collections:
 facebook_url: https://www.facebook.com/makerspacemtu/
 twitter_url: https://twitter.com/makerspacemtu
 instagram_url: https://instagram.com/makerspacemtu
+discord_url: https://discord.gg/rwchwXNqWB
 email_address: makerspace@mtu.edu
 email_updates_url: http://eepurl.com/bKQAsf
+alley_reserve_form_url: https://forms.gle/6mRoFRyugN2UaAiu8
+training_request_url: https://forms.gle/CN2VsJg6EPfAErtn6
+
